kubernetes/httpbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin-svc
  namespace: httpbin
  annotations:
    konghq.com/path: "/anything"
spec:
  ports:
  - port: 80
    targetPort: 8080
    appProtocol: http
  type: ClusterIP
  selector:
    app: httpbin
